# hobbies

./: .command-link  .command-registry.json  .gitignore  AGENTS.md  AGENT_OS_COMMANDS.md  CLAUDE.md  CLAUDE.md.backup-20251023-081047  CLAUDE.md.backup.20250805-204115  COMMANDS.md  LICENSE  MANDATORY_SLASH_COMMAND_ECOSYSTEM.md  Makefile  README.md  agos  create-module-agent.py  create-spec-enhanced.py  create-spec.py  execute-tasks.py  pyproject.toml  slash  slash_commands.py  uv.toml
.agent-os/: UV_ENVIRONMENT.md  prompt_config.yaml  task_summary.md
.agent-os/agent_learning/: config.yaml  report_template.md
.agent-os/cli/: __init__.py  interactive.py  main.py  progress.py
.agent-os/commands/: README_v3.md  README_v3_1.md  __init__.py  agent.py  ai_agent.py  create_module_agent.py  create_module_agent.py.backup  create_module_agent_backup_20250810_104956.py  data.py  engineering_data_context.py  execute-tasks-enhanced.py  git-commit-push-merge-all.py  git-sync-all-enhanced.py  git-trunk-flow-enhanced.py  git-trunk-status.py  git-trunk-sync-all.py  git.py  git_sync.py  git_trunk_flow.py  git_trunk_flow_enhanced.py  install_ecosystem_awareness.py  modernize_deps.py  organize_structure.py  project.py  propagate_commands.py  search_commands.py  spec.py  spec_enhanced.py  sync_all_commands.py  task.py  test.py  test_automation.py  test_automation_enhanced.py  uv_environment_manager.py  verify-ai-work.py  web_resource_manager.py
.agent-os/instructions/: analyze-product.md  create-spec.md  enhanced-create-spec.md  enhanced-execute-tasks.md  execute-tasks-enhanced.md  execute-tasks.md  plan-product.md
.agent-os/integration/: __init__.py  context_optimizer.py  enhanced_specs.py  prompt_evolution.py  workflow_refresh.py
.agent-os/modules/: agent_assignments.py  agent_learning.py  progress_tracker.py  prompt_enhancement.py
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/progress/: progress-template.md
.agent-os/resources/: ai_templates.yaml  aitmpl_agents_catalog.yaml
.agent-os/standards/: best-practices.md  code-style.md  tech-stack.md
.agent-os/sub-agents/: development-agent.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/commands/: work.md
.claude/helpers/: checkpoint-manager.sh  github-safe.js  github-setup.sh  quick-start.sh  setup-mcp.sh  standard-checkpoint-hooks.sh
.claude/skills/: .gitignore  guidelines  meta  optimization  product  workflows
.codex/: skills
.common/: parallel_utils.py
.cursor/rules/: analyze-product.mdc  create-spec.mdc  execute-tasks.mdc  (+1 more)
.drcode/: config.json  droids.yml
.git-commands/: git_manager.py  slash_commands.py
.slash-commands/: ecosystem_registry.json
agents/: README.md  index.yaml
cultural/: bala_vihar.md
docs/: AI_AGENT_ORCHESTRATION.md  HTML_REPORTING_STANDARDS.md  repo-audit.md  roadmap.md
gardening/: fruit_mango.md  fruit_watermelon.md  veg_dosakai.md  veg_drumstick.md
health/: knees.md
scripts/: convert_ascii_logos.py
sdev/: 50_golden_rules.md  visualization.md
specs/: README.md
sports/: sports.md
tests/: __init__.py  conftest.py  test_smoke.py
(+273 files in other folders)
